@@ -1,3 +1,14 @@
+2017-08-09  Robin Morisset  <rmorisset@apple.com>
+
+        Make JSC_validateExceptionChecks=1 succeed on JSTests/stress/v8-deltablue-strict.js.
+        https://bugs.webkit.org/show_bug.cgi?id=175358
+
+        Reviewed by Mark Lam.
+
+        * jit/JITOperations.cpp:
+        * runtime/JSObjectInlines.h:
+        (JSC::JSObject::putInlineForJSObject):
+
 2017-08-09  Oleksandr Skachkov  <gskachkov@gmail.com>
 
         REGRESSION: 2 test262/test/language/statements/async-function failures
